<resources>
    <string name="app_name">IMAD EXAM</string>
    <string name="campsite_commander">Campsite Commander</string>
    <string name="enter">Enter</string>
    <string name="exit">Exit</string>
    <string name="camp_site">Camp Site</string>
    <string name="gear_check">Gear Check</string>
    <string name="add_gear">Add Gear</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="equipment">equipment</string>
    <string name="list_of_added_equipment">List of added equipment</string>
    <string name="list_of_equipment">list of equipment</string>
    <string name="back_to_base">Back to Base</string>
    <string name="recommendations_for_gear">Recommendations for gear</string>
    <string name="made_by_st10537135_on_10_june_2026">Made by ST10537135 on 10 June 2026</string>
</resources>